Wrote the introduction seection for lab4.

--- a/labs/lab4/cs380F2014-lab4.tex
+++ b/labs/lab4/cs380F2014-lab4.tex
@@ -15,6 +15,9 @@
 When either designing a new database or attempting to understand an existing one, it is often useful to produce a
 visualization of the relational schema.  A technical diagram of a schema helps a database designer to see the
 relationships that already exist in a complex database, thus aiding understanding and the identification of defects.
+When designing a new database schema, a technical diagram helps a person to see the proposed relationships between
+tables and identify potential sources of performance bottlenecks or correctness concerns. In this laboratory assignment,
+we will explore how to use a well-known database visualization tool, SQLFairy, to show database schemas.
 
 \section*{Accessing the JoSQL Library}
 
