Wrote out a full version of the right sections for lab4.

--- a/labs/lab4/cs380F2014-lab4.tex
+++ b/labs/lab4/cs380F2014-lab4.tex
@@ -19,13 +19,11 @@ When designing a new database schema, a technical diagram helps a person to see 
 tables and identify potential sources of performance bottlenecks or correctness concerns. In this laboratory assignment,
 we will explore how to use a well-known database visualization tool, SQLFairy, to show database schemas.
 
-\section*{Accessing the JoSQL Library}
+\section*{Learning About Schema Visualization}
 
+\section*{Using SQLFairy for Schema Visualization}
 
-\section*{Combining Imperative and Declarative Programming with JoSQL}
-
-
-\section*{Experimental Performance Evaluation of Declarative Querying}
+\section*{Exploring Schema Visualization Options}
 \vspace*{-.2in}
 
 
