--- a/labs/lab5/cs380F2014-lab5.tex
+++ b/labs/lab5/cs380F2014-lab5.tex
@@ -14,89 +14,75 @@ Language
 \section*{Introduction}
 
 After creating and visualizing a relational database schema, it is important to define the data manipulation language
-(DML) statements that are needed to support interact with the database.  In this laboratory assignment, you will create
-a wide variety of DML commands---like the SQL {\tt insert}, {\tt update}, and {\tt delete}---and executed them against a
-SQLite database.
+(DML) statements that are needed to support interaction with the database.  In this laboratory assignment, you will create
+a wide variety of DML commands---like the SQL {\tt select}, {\tt insert}, {\tt update}, and {\tt delete}---and executed
+them against a SQLite database.
 
 \vspace*{-.05in}
-\section*{Learning About Schema Visualization}
+\section*{Adding and Removing Relational Data}
 
-Since SQLFairy claims to produce something known as a ``pseudo-ER'' diagram, it is a good idea to review Section 7.5 of
-your textbook to learn more about how entity relationship (ER) diagrams aid in the design and understanding of database
-schemas. Instead of attempting to understand every detail about ER diagrams, you should make sure that you understand
-the basics (e.g., the meaning of a box and an arrow). Now, please visit the SQLFairy Web site, available at
-\url{http://sqlfairy.sourceforge.net/}, and learn more about the ``pseudo-ER'' diagrams that this tool produces. How are
-the textbook's diagrams similar to and different from those created by SQLFairy?
+The SQL {\tt insert} and {\tt delete} commands allow you to add and remove relational data, respectively. To learn how
+these commands support the modification of a database, please review Sections 3.9.1 and 3.9.2 of your textbook.  Then,
+you should return to one of the relational databases that you visualized for the previous laboratory assignment. Now, you
+can use the {\tt sqlite3} command-line interactive shell to instantiate this schema as a SQLite database.
+Once you are sure that the schema was correctly created in the database, you should implement and execute at least four {\tt
+insert} statements for each of the tables in your chosen schema.  
 
-\vspace*{-.05in}
-\section*{Using SQLFairy for Schema Visualization}
-
-The SQLFairy suite of tools is available on your workstation, through programs like {\tt sqlt-graph}.  In your terminal
-window, type the commands ``{\tt man sqlt-graph}'' and ``{\tt sqlt-graph --help}'' to learn more about how this program
-works. Once you and your partner understand the features that this tool provides, change into the course repository and
-type the command ``{\tt git pull}''. If you change to the {\tt cs380F2014-share/labs/lab4/} directory you should now see
-that there are a total of six SQL files that define the schemas of six databases. As you first learn to use the {\tt
-  sqlt-graph} tool, try to visualize the schema of the {\tt University.sql} file that was downloaded from the Web site
-for the course's textbook. How does this visualization compare to the one in Figure 7.15? 
-
-As you are creating schema visualizations for this assignment, you should save the output of {\tt sqlt-graph} in the PNG
-format.  When you want to view a PNG file created by the visualizer, you can use the {\tt xdg-open} command in your
-terminal or load the file through the graphical file browser.
+As you are populating your database with data, please make sure that you take into account the integrity constraints
+defined for the schema. In addition to running the four {\tt insert} statements that will conform to the integrity
+constraints, you should try to run at least one {\tt insert} that will be rejected by SQLite because of the fact that it
+violates the database's constraints. Please recall from a previous classroom discussion that, depending upon the design
+of your schema,  you may need to configure SQLite to fully enforce the integrity constraints. As you are running all of
+these {\tt insert} and {\tt delete} commands, you should carefully record the ``before'' and ``after'' state of the
+database and comment on why the state changed the way that it did. 
 
 \vspace*{-.05in}
-\section*{Exploring Schema Visualization Options}
+\section*{Updating Data in a Relational Database}
 
-As you may have noticed, SQLFairy supports different dialects of the structured query language using the ``{\tt -d}''
-option.  In particular, the tool supports the PostgreSQL, MySQL, and SQLite formats.  How does the specification of
-these three options change the resulting pseudo-ER diagram? Additionally, the SQLFairy tool supports the ``{\tt
-  --show-datatypes}'', ``{\tt --show-sizes}'', and ``{\tt --show-constraints}'' command-line options.  In order to
-successfully complete this laboratory assignment, you should run the {\tt sqlt-graph} tool with all possible
-combinations of these three command-line options for all six of the relational schemas available in the Git repository.
-For each relational schema, you should also write a short commentary explaining at least one way in which the
-visualization helps you to understand an aspect of the database's structure. Your writing should clearly explain the
-meaning of all the key graphical elements, such as the boxes and the arrows, contained in the diagrams. Before you turn
-in each of the visualizations, you should make sure that you annotate them with labels that state the name of the SQL
-file and the chosen command-line options. Please see the instructor if you are not able to run {\tt sqlt-graph} in the
-terminal.
+Section 3.9.3 explains the operation of the SQL {\tt update} statement.  For each of the tables in your chosen schema,
+you should run at least one {\tt update} statement that will yield data that adheres to the integrity constraints.
+Again, as you run the {\tt update}s, please take care to record the ``before'' and ``after'' state of the database, in
+addition to commenting on why the {\tt update} changed the database in the way that it did. If possible, try to execute
+a wide variety of different {\tt update} operations.
 
-Finally, you should make your own SQL file that contains an original schema.  This schema should contain, in total, at
-least two tables, two constraints, and five attributes---and also be executable with the {\tt sqlite3} command-line
-tool. As you are creating this schema, please regularly produce its visualization and confirm that it conforms to your
-mental model of the database.  After you have finished exploring the different options for schema visualization with
-SQLFairy, you should use the best mix of parameters to produce a final visualization with {\tt sqlt-graph}.  In addition
-to turning in its SQL source code, please make sure that you submit a labelled version of this schema visualization that
-gives its name and the parameters used to create the diagram. 
+\vspace*{-.05in}
+\section*{Querying a Relational Database}
+
+The SQL {\tt select} statement allows you to query the database, thereby discovering what data values are stored inside
+of it. To learn more about the basic structure of SQL queries, please review Sections 3.3 and 4.1 of your textbook.
+Then, you should write at least ten {\tt select} statements that interact with a wide variety of the tables in the
+relational database.  Whenever possible, these queries should also use various features of the SQL language, such as
+queries on multiple tables, aggregation, and joins. As you are running your queries, you should consider the pseudo-ER
+diagrams that you produced in the previous laboratory assignment to ensure that you understand how tables are connected.
+Please see the course instructor if you cannot run the {\tt select} statements correctly.
 
 \section*{Summary of the Required Deliverables}
 
-You and your partner should always use a Git repository, hosted by Bitbucket, to store the schema visualizations and
-all of the other deliverables required by this assignment. The repository must be shared with the instructor and
-the version control log should accurately reflect each student's contribution to this assignment. In addition, this
-assignment invites your partnership to submit one printed version of the following deliverables; each member should
-write and submit their own version of the first deliverable. Please see the instructor if you have questions about
-these matters.
+As you complete this laboratory assignment, you should record all of your notes, DML commands, and outputs in files
+stored in your Git version control repository.  Additionally, this assignment invites you to submit one signed and
+printed version of the following deliverables:
 
 % \vspace*{-.05in}
 
 \begin{enumerate}
-  \setlength{\itemsep}{0pt}
-  \item A two paragraph commentary on the work that each team member completed. 
-  \item An overview of how the {\tt sqlt-graph} command-line options influence the resulting diagrams.
-  \item A comparison of the University visualizations from the textbook and the {\tt sqlt-graph} tool.
-  \item A brief commentary on the visualizations produced for each of the provided schemas.
-  \item The complete and commented SQL source code for the student-designed relational schema.
-  \item The final visualization of the student-designed relational schema, as produced by {\tt sqlt-graph}.
+    \setlength{\itemsep}{0pt}
+  \item A commentary on the general structure of {\tt select}, {\tt update}, {\tt insert}, and {\tt delete} statements.
+  \item Convincing evidence to demonstrate that your {\tt create table} statements ran correctly.
+  \item A description of how you configured SQLite to run correctly for your schema.
+  \item The final listing of the {\tt create table} statements for your database schema.
+  \item A complete listing of the {\tt update}, {\tt insert}, and {\tt delete} statements that you ran.
+  \item A complete listing of the {\tt select} statements that you used to query the database.
+  \item For each command, the before and after state for each modified table, highlighting all changes.
   \item A reflection on the challenges that you faced when completing this laboratory assignment.
 \end{enumerate}
 
 % \vspace*{-.1in} 
 
-In adherence to the Honor Code, students should complete this assignment while exclusively collaborating with the
-other member of their team. While it is appropriate for students in this class---who are not in the same team---to have
-high-level conversations about the assignment, it is necessary to distinguish carefully between the team that discusses
-the principles underlying a problem with another team and the team that produces an assignment that is identical to, or
-merely a variation on, the work of another team.  Deliverables from one team that are nearly identical to the work of
-another team will be taken as evidence of violating Allegheny College's \mbox{Honor Code}.
+In adherence to the Honor Code, students should complete this assignment on an individual basis. While it is appropriate
+for students in this class to have high-level conversations about the assignment, it is necessary to distinguish
+carefully between the student who discusses the principles underlying a problem with others and the student who produces
+assignments that are identical to, or merely variations on, someone else's work.  Deliverables that are nearly identical
+to the work of others will be taken as evidence of violating Allegheny College's \mbox{Honor Code}.
 
 % Before you turn in this assignment, you also must ensure that the course instructor has read access to your Bitbucket
 % repository that is named according to the convention {\tt cs380F2014-<your user name>}.  Please see the instructor if
