Finished working on the first two sections of the lab assignment.

--- a/labs/lab6/cs380F2014-lab6.tex
+++ b/labs/lab6/cs380F2014-lab6.tex
@@ -13,13 +13,19 @@ Applications}
 \section*{Introduction}
 
 Chapter 5 of your textbook introduces advanced concepts in the structure query language (SQL), with a focus on topics
-like accessing a database from a programming language. In this laboratory assignment, you will expand on the example in
+like accessing a database from a programming language. In this laboratory assignment, you will leverage the example in
 Figure 5.1 of the textbook to ultimately implement your own database-centric application based on a schema that you
-visualized and manipulated in the past two assignments.
+visualized and manipulated in the past two assignments. In addition to using a simple Java program that uses a
+databases, you will explore more about the configuration and use of the HyperSQL database engine.
 
 \vspace*{-.05in}
 \section*{Learning About the HyperSQL Database Engine}
 
+Please visit \url{http://hsqldb.org/} to learn more about the HyperSQL database engine, often called HSQLDB. This
+database management system (DBMS) claims to be a ``100\% Java Database''---what are the benefits and drawbacks associated with
+having a database that is completely implemented in the Java programming language? What are the features and
+limitations associated with using this DBMS? When a database application is not running and interacting with the
+database, how does HSQLDB persist the data values? What applications currently use HSQLDB?
 
 \vspace*{-.05in}
 \section*{Compiling and Using the FindFile Program}
